# src/liveChat/server/docs/swagger.json
@@ -26,7 +26,7 @@
                 }
             }
         },
-        "/user/DeleteUser": {
+        "/user/deleteUser/{id}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -43,7 +43,7 @@
                         "type": "integer",
                         "description": "用户id",
                         "name": "id",
-                        "in": "query"
+                        "in": "path"
                     }
                 ],
                 "responses": {
